--- a/basics/index.html
+++ b/basics/index.html
@@ -10,9 +10,11 @@
 <body>
     <h1>Typescript</h1>
 
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script>
     <script src="./config.js"></script>
-    <script src="./index.js"></script>
+    <script src="./index.js"></script> -->
+    <script src="./dist/demo.js"></script>
+    <script src="./dist/app.js"></script>
 </body>
 
 </html>
